{
    "name": "GameInput",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "ceb89819-8ddb-42ee-91ef-dd1ee36f06bd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "d96e670e-b0fa-4545-be41-a2a45ae81d1d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraLook",
                    "type": "Value",
                    "id": "069b178b-cc1c-4391-bed2-58a520f96045",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "bfe17411-382f-4639-baaa-4f1609f03c72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WalkToggle",
                    "type": "Button",
                    "id": "3c218541-c007-4d37-ab3e-7bd80f93626f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "9a335531-bdda-48e9-85ec-2542df5db24d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "8109cf1f-7fc1-478f-a01a-13775d0dae11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spint",
                    "type": "Button",
                    "id": "af3ebb5b-605f-478a-b2d1-cfefc90555a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f440b692-0f83-4bad-8fbf-37f8398063c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "6cc9d05d-839e-427c-90b4-428bbacb7e58",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f3dd7c10-e433-42db-b40c-4bd94dc5fc33",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "88a7c1c4-e3b2-4e5e-aee6-ba9d97654856",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f8160055-70eb-4c62-ade9-ae655236a6f1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5bd91cec-9d90-44fb-987d-07025ea19a43",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8238842f-3ea7-4200-ac65-d950158ebfe1",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2",
                    "groups": "",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37dafb8c-3bb1-4706-8b20-a0fd0226a9f4",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "952c28b6-e3aa-4331-9a24-313fbf44e67e",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e617a210-9fec-4d84-9cd6-88b0c978f5c5",
                    "path": "<VirtualMouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb9de705-13a8-4f86-b9f8-6eb8be695be7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbc0fbf9-db7c-4f94-9b86-e67cc35c009b",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95e6495e-7f15-4c50-9d09-0ed0eebc3175",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}